--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,5 @@
-language: java
- 
-env:
-  global:
-    - SONATYPE_USERNAME=chicchiricco
-    - secure: "QR9e9S3bmn1Q+HzSoTtB2V8JxZKDXYF82mrcQC9NhEikcEmRI02jI/dps94dmnTZdgVeraUbt7uZLryQ3AwqkR9fqgzJ9+nOCx/Cqd/XO0+UvluRGozD5Mh/MACkHAQENlT66oBmARtyImlwBjU7LRSfBkeKABBrRSTfcCDOZBM="
-
-after_success:
-  - python .travis.addServer.py
-  - mvn clean deploy --settings ~/.m2/mySettings.xml
-
-notifications:
-  email:
-    - connid-dev@googlegroups.com
+sudo: false
+language: ruby
+rvm:
+  - 2.1.0
+before_install: gem install bundler -v 1.12.5
